opam-version: "2.0"
maintainer: "dave@recoil.org"
authors: [
  "Christian Lindig"
  "David Scott"
  "Euan Harris"
  "John Else"
  "Jon Ludlam"
  "Jonathan Davies"
  "Marcello Seri"
  "Si Beaumont"
  "Thomas Sanders"
  "Vincent Bernardoff"
]
license: "LGPL-2.1-only"
tags: ["org:mirage" "org:xapi-project"]
homepage: "https://github.com/xapi-project/ocaml-xenstore-clients"
doc: "https://xapi-project.github.io/ocaml-xenstore-clients/"
bug-reports: "https://github.com/xapi-project/ocaml-xenstore-clients/issues"
depends: [
  "ocaml" {>= "4.04.0"}
  "dune" {>= "1.0"}
  "camlp-streams"
  "lwt"
  "xenstore" {>= "2.0.0"}
  "xenstore_transport"
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
dev-repo: "git+https://github.com/xapi-project/ocaml-xenstore-clients.git"
synopsis: "Command line tool for interfacing with xenstore"
description: """
This is a CLI `xs` tool for interfacing with XenStore.
"""
